[Java] Fix build on JDK 23-ea caused by deprecation in Unsafe, i.e. https://openjdk.org/jeps/471.